# dnptools

./: .gitignore  DEVELOPERS_MANNUAL.md  README.md  environment.yml  main.py  pyproject.toml  setup.cfg  use_modular_server.py
.github/workflows/: build_and_test_package.yml  publish_conda_package.yml  publish_pypi_package.yml  python-package-conda.yml  python-package.yml  python-publish.yml  test_env_variables.yml
JsonSocketClient/: pom.xml  timing
JsonSocketClient/src/main/java/jsonclient/: Client.java  ClientDG.java
conda/: environment.yml  meta.yaml
denoptim/: ScoringServer.py
java_client/: .project  Client4.java
java_client/src/main/java/jsonclient/: Client.java
python_server/: server.py  use_modular_server.py
src/dnptools/: __init__.py  scoringservice.py
test/: test_scoringserver.py
