[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dnptools"
version = "0.0.1"
description = "Python utilities for working with DENOPTIM (https://github.com/denoptim-project/DENOPTIM)"
authors = [
    {name = "David Grellscheid"},
    {name = "Marco Foscato"},
    {name = "Marcello Costamagna"},
]
license = {text = "AGPL-3.0-only"}
classifiers = [
    "Programming Language :: Python :: 3",
]

