[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dnptools"
version = "0.0.3" #This is the only place where version is defined.
description = "Python utilities for working with DENOPTIM (https://github.com/denoptim-project/DENOPTIM)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
authors = [
    {name = "David Grellscheid"},
    {name = "Marco Foscato"},
    {name = "Marcello Costamagna"},
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
